--- a/Dictionary/UI/Base/TextInputView/TextInputView.xib
+++ b/Dictionary/UI/Base/TextInputView/TextInputView.xib
@@ -1,18 +1,67 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TextInputView" customModule="Dictionary" customModuleProvider="target">
+            <connections>
+                <outlet property="label" destination="brZ-Ns-hK3" id="JoO-xE-1e9"/>
+                <outlet property="textField" destination="kQg-3h-1im" id="6s4-cI-5RC"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+        <view contentMode="scaleToFill" id="jVI-UM-Jes">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="153"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <subviews>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="brZ-Ns-hK3">
+                    <rect key="frame" x="8" y="8" width="398" height="13.5"/>
+                    <fontDescription key="fontDescription" style="UICTFontTextStyleCaption2"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uWG-Za-fnz">
+                    <rect key="frame" x="8" y="23.5" width="398" height="121.5"/>
+                    <subviews>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Label" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kQg-3h-1im">
+                            <rect key="frame" x="8" y="8" width="382" height="105.5"/>
+                            <color key="backgroundColor" name="backgroundLightGreyColor"/>
+                            <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </textField>
+                    </subviews>
+                    <color key="backgroundColor" name="backgroundLightGreyColor"/>
+                    <constraints>
+                        <constraint firstItem="kQg-3h-1im" firstAttribute="leading" secondItem="uWG-Za-fnz" secondAttribute="leading" constant="8" id="4Ji-Bz-zYi"/>
+                        <constraint firstAttribute="bottom" secondItem="kQg-3h-1im" secondAttribute="bottom" constant="8" id="OBy-iu-ygu"/>
+                        <constraint firstItem="kQg-3h-1im" firstAttribute="top" secondItem="uWG-Za-fnz" secondAttribute="top" constant="8" id="inr-XJ-AQx"/>
+                        <constraint firstAttribute="trailing" secondItem="kQg-3h-1im" secondAttribute="trailing" constant="8" id="qIo-OI-9pt"/>
+                    </constraints>
+                </view>
+            </subviews>
+            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="uWG-Za-fnz" secondAttribute="trailing" constant="8" id="F7K-dG-3Wd"/>
+                <constraint firstItem="brZ-Ns-hK3" firstAttribute="leading" secondItem="jVI-UM-Jes" secondAttribute="leading" constant="8" id="fUb-1J-afX"/>
+                <constraint firstItem="uWG-Za-fnz" firstAttribute="leading" secondItem="jVI-UM-Jes" secondAttribute="leading" constant="8" id="g0V-A7-grc"/>
+                <constraint firstAttribute="bottom" secondItem="uWG-Za-fnz" secondAttribute="bottom" constant="8" id="oNO-fF-2G7"/>
+                <constraint firstItem="brZ-Ns-hK3" firstAttribute="top" secondItem="jVI-UM-Jes" secondAttribute="top" constant="8" id="p24-Sc-sqr"/>
+                <constraint firstItem="uWG-Za-fnz" firstAttribute="top" secondItem="brZ-Ns-hK3" secondAttribute="bottom" constant="2" id="p9q-fi-4Yf"/>
+                <constraint firstAttribute="trailing" secondItem="brZ-Ns-hK3" secondAttribute="trailing" constant="8" id="sAd-da-VFi"/>
+            </constraints>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <viewLayoutGuide key="safeArea" id="lgL-75-YKi"/>
+            <point key="canvasLocation" x="92.753623188405811" y="-446.98660714285711"/>
         </view>
     </objects>
+    <resources>
+        <namedColor name="backgroundLightGreyColor">
+            <color red="0.94099998474121094" green="0.94099998474121094" blue="0.94099998474121094" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
